--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,51 @@
-// http://ionicframework.com/docs/theming/
-
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+/* Carbon */
+.carbon-dropdown {
+	width: 100%;
+	position: relative;
+	select {
+		padding-right: 35px;
+		text-overflow: ellipsis;
+		background-color: $white;
+		border: 1px solid #ccd6db;
+		color: rgba(0,0,0,.85);
+		cursor: pointer;
+		list-style: none;
+		width: 100%;
+		font-size: 1.4rem;
+		color: #3F3F3F;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		-ms-appearance: none;
+		-o-appearance: none;
+		appearance: none;
+		option {
+			font-size:1.4rem !important;
+		}
+	}
+	select {
+        &::-ms-expand { display: none; }
+        &:focus {
+            &::-ms-value { color: #3F3F3F; background: transparent; }
+        }
+        &:focus,
+        &:active {
+            border: 1px solid #255bc7;
+        }
+    }
+	&:after {
+		height:calc(100% - 8px);
+		font-family: "Ionicons";
+		content: '\f280';
+		font-size: 14px;
+		font-weight: 400;
+		font-style: normal;
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		color: $white;
+		background-color: #255bc7;
+		pointer-events: none;
+		padding: 8px 10px 0 10px;
+		vertical-align: middle;
+	}
+}
