--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,43 @@
 page-home {
-
+    ion-content {
+        background-color: $purple-bkd !important;
+    }
+    ion-card {
+        position: relative;
+        width: 145px !important;
+        height: 240px !important;
+        ion-card-content {
+            ion-card-title {
+                padding-top: 0 !important;
+                font-size: 1.3rem !important;
+            }
+            p {
+                font-size: 1.1rem !important;
+            }
+        }
+        .price {
+            font-weight: 700;
+            position: absolute;
+            bottom: 0;
+            right: 10px;
+            color: $light-grren
+        }
+        .overlap {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            height: 85px;
+            width: 115px;
+        }
+        img {
+            &:not(.overlap){
+                height: 120px;
+            }
+        }
+    }
+    @media screen and (max-width: map-get($grid-breakpoints, sm)) {
+		ion-card {
+            margin: 10px auto !important;
+        }
+	}
 }
